--- a/chall05/challenges05.css
+++ b/chall05/challenges05.css
@@ -4,7 +4,7 @@ body * {
 body {
   border: 10px solid #00c6ad;
   padding: 20px 30px 0px 30px;
-  width: 430px;
+  width: 380px;
 }
 .playlist {
   display: flex;
@@ -68,6 +68,9 @@ body {
   justify-content: center;
   margin-left: 25px;
 }
+.button__icon i:first-child {
+  margin-right: 25px;
+}
 .button__icon i {
   width: 60px;
   height: 60px;
@@ -77,7 +80,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-right: 25px;
 }
 
 .music-component {
